# fcc

./: .gitignore  README.md  pyproject.toml  requirements.txt
fcc/: cli.py  utils.py
fcc/commands/: __init__.py  auth.py  bench.py  server.py  site.py
fcc/utils/: logs.py  ssh.py  utils.py
