[project]
name = "fcc"
description = "CLI for Frappe Cloud"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Command Line Interfaces",
]
dependencies = [
"certifi==2022.12.7",
"charset-normalizer==3.0.1",
"click==8.1.3",
"idna==3.4",
"humanize==4.6.0",
"markdown-it-py==2.2.0",
"mdurl==0.1.2",
"Pygments==2.14.0",
"requests==2.28.2",
"rich==13.3.1",
"simple-term-menu==1.6.1",
"urllib3==1.26.14",
]
dynamic = [
    "version",
]

# [project.scripts]
# fcc = "fcc.cli:cli"

[project.scripts]
straw = "fcc.cli:cli"
# [project.urls]
# Changelog = "https://github.com/frappe/bench/releases"
# Documentation = "https://frappeframework.com/docs/user/en/bench"
# Homepage = "https://frappe.io/bench"
# Source = "https://github.com/frappe/bench"

[build-system]
requires = [
    "hatchling>=1.6.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "fcc/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/fcc"
]

[tool.hatch.build.targets.wheel]
include = [
  "/fcc"
]
